--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
  "version": "1.0.0",
  "description": "This is a sample description",
  "short_name": "Short Sample Name",
- "permissions": ["activeTab", "declarativeContent", "storage", "<all_urls>"],
+ "permissions": ["activeTab", "declarativeContent", "storage", "bookmarks"],
  "content_scripts": [
    {
      "matches": ["<all_urls>"],
